--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -29,7 +29,7 @@
                 <article>
                     <h1>Въведение в AI, ChatGPT и Python Основи</h1>
                     <section id="CourseOverview_IntroductionToAI" data-hours="4">
-                        <h3>Въведение в AI и ChatGPT (4 УЧ)</h3>
+                        <h3>Въведение в AI и ChatGPT</h3>
                         <ol>
                             <li>Какво е **AI, Machine Learning (ML) и Generative AI**?</li>
                             <li>Как работи **ChatGPT и Големите Езикови Модели (LLM)**.</li>
@@ -38,7 +38,7 @@
                         </ol>
                     </section>
                     <section id="Module2_PythonBasics" data-hours="10">
-                        <h3>Запознаване с Python (От нулата) (10 УЧ)</h3>
+                        <h3>Запознаване с Python (От нулата)</h3>
                         <ol>
                             <li>Основи на програмирането: Променливи, типове данни, оператори.</li>
                             <li>Условни конструкции (`if/elif/else`) и цикли (`for/while`).</li>
@@ -56,7 +56,7 @@
                 <article>
                     <h1>Основи на ML и Първи Проект</h1>
                     <section id="Module3_ML_Basics" data-hours="8">
-                        <h3>Основи на Машинното Обучение (8 УЧ)</h3>
+                        <h3>Основи на Машинното Обучение</h3>
                         <ol>
                             <li>Какво е ML модел и как се обучава (пайплайн).</li>
                             <li>**Supervised vs. Unsupervised Learning** (Класификация, Регресия, Клъстериране).</li>
@@ -68,7 +68,7 @@
                         </ol>
                     </section>
                     <section id="Module4_Project1" data-hours="8">
-                        <h3>Първи Проект: Класификация на данни (8 УЧ)</h3>
+                        <h3>Първи Проект: Класификация на данни</h3>
                         <ol>
                             <li>Поставяне на проблема: Изграждане на **Спам Филтър**.</li>
                             <li>Feature Engineering и подготовка на текстови данни за класификация.</li>
@@ -83,7 +83,7 @@
                 <article>
                     <h1>LLM, ChatGPT API и NLP</h1>
                     <section id="Module5_ChatGPT_API" data-hours="8">
-                        <h3>Работа с ChatGPT API (8 УЧ)</h3>
+                        <h3>Работа с ChatGPT API</h3>
                         <ol>
                             <li>Въведение в **OpenAI API**: Настройка, API ключ, ценообразуване.</li>
                             <li>Основни API заявки с **Python SDK**.</li>
@@ -96,7 +96,7 @@
                         </ol>
                     </section>
                     <section id="Module6_VibeCoding" data-hours="3">
-                        <h3>Vibe Coding с AI асистенти (3 УЧ)</h3>
+                        <h3>Vibe Coding с AI асистенти</h3>
                         <ol>
                             <li>Обзор на инструменти: **GitHub Copilot, Cursor, Claude Code**.</li>
                             <li>Техники за ефективна колаборация с AI при генериране и рефакториране на код.</li>
@@ -104,7 +104,7 @@
                         </ol>
                     </section>
                     <section id="Module7_NLP" data-hours="5">
-                        <h3>NLP и анализ на текст (5 УЧ)</h3>
+                        <h3>NLP и анализ на текст</h3>
                         <ol>
                             <li>NLP: Как ML „разбира“ езика.</li>
                             <li>Предварителна обработка на текст: **Токенизация**, стоп думи, нормализация.</li>
@@ -118,7 +118,7 @@
                 <article>
                     <h1>AI Асистент, Деплоймент и Финален Проект</h1>
                     <section id="Module8_Project2_Assistant" data-hours="6">
-                        <h3>Втори Проект: AI Асистент (6 УЧ)</h3>
+                        <h3>Втори Проект: AI Асистент</h3>
                         <ol>
                             <li>Обучение на ML модел за **Sentiment Analysis** (анализ на емоции).</li>
                             <li>Дизайн на логиката: Свързване на ML модела с **ChatGPT за контекстуален отговор**.</li>
@@ -127,14 +127,14 @@
                         </ol>
                     </section>
                     <section id="Module9_Deployment" data-hours="4">
-                        <h3>Визуализация и автоматизация (4 УЧ)</h3>
+                        <h3>Визуализация и автоматизация</h3>
                         <ol>
                             <li>Въведение във **Flask или Streamlit** за уеб интерфейс (препоръчва се Streamlit).</li>
                             <li>Имплементация на UI и свързване на AI логиката с уеб приложението.</li>
                         </ol>
                     </section>
                     <section id="Module10_Cloud" data-hours="3">
-                        <h3>Деплоймент в облака (3 УЧ)</h3>
+                        <h3>Деплоймент в облака</h3>
                         <ol>
                             <li>Подготовка за деплоймент: `requirements.txt`, управление на зависимости.</li>
                             <li>**Практическа Сесия:** Качване на AI асистента онлайн (Streamlit Cloud или подобна).
@@ -143,13 +143,13 @@
                         </ol>
                     </section>
                     <section id="Module11_FinalProject" data-hours="9">
-                        <h3>Финален Проект и Портфолио (9 УЧ)</h3>
+                        <h3>Финален Проект и Портфолио</h3>
                         <ol>
                             <li>Избор и Планиране на собствена идея за **AI асистент** (с подкрепа от преподавателя).
                             </li>
-                            <li>**Индивидуална/Групова Работа** по проекта и менторски насоки (4 УЧ).</li>
+                            <li>**Индивидуална/Групова Работа** по проекта и менторски насоки.</li>
                             <li>Подготовка за Представяне.</li>
-                            <li>**Представяне на Финалните Проекти** (3 УЧ).</li>
+                            <li>**Представяне на Финалните Проекти**.</li>
                             <li>Съвети за **CV, LinkedIn** и портфолио за AI специалисти.</li>
                         </ol>
                     </section>
