--- a/pages/agenda/agenda.html
+++ b/pages/agenda/agenda.html
@@ -15,7 +15,7 @@
 
 <body class="background_gradient_left_right">
     <header class="dark_centered_background_gradient">
-        <h1>ChatGPT и Машинно Обучение: Създай свой AI асистент с Python</h1>
+        <h1>ChatGPT и Машинно Обучение:<br> Създай свой AI асистент с Python</h1>
         <h2><img src="/ProgressBG-ChatGPT_and_ML-Slides/outfit/images/logos/ProgressBG_logo.png" alt=""></h2>
         <h3>Програма</h3>
     </header>
@@ -24,154 +24,176 @@
             <div class="toggleButtons">
                 <span class="toggleSubThemes">Toggle sub-themes</span>
             </div>
+
             <div class="themes">
-
-                <article>
-                    <h1>Въведение в AI, ChatGPT и Python Основи</h1>
+                <article><h1>Introduction</h1>
                     <section id="CourseOverview_IntroductionToAI" data-hours="4">
-                        <h3>Въведение в AI и ChatGPT</h3>
+                        <h3>Course Introduction. Framing the concepts</h3>
                         <ol>
-                            <li>Какво е **AI, Machine Learning (ML) и Generative AI**?</li>
-                            <li>Как работи **ChatGPT и Големите Езикови Модели (LLM)**.</li>
-                            <li>Реални примери и приложения в бизнеса и ежедневието.</li>
-                            <li>Настройване на работната среда (Python, Jupyter/Colab).</li>
-                        </ol>
-                    </section>
-                    <section id="Module2_PythonBasics" data-hours="10">
-                        <h3>Запознаване с Python (От нулата)</h3>
-                        <ol>
-                            <li>Основи на програмирането: Променливи, типове данни, оператори.</li>
-                            <li>Условни конструкции (`if/elif/else`) и цикли (`for/while`).</li>
-                            <li>Функции и Структури от данни: Списъци (Lists), Речници (Dictionaries), Кортежи (Tuples).
-                            </li>
-                            <li>Библиотеки за данни I: **NumPy** – операции с n-мерни масиви.</li>
-                            <li>Библиотеки за данни II: **Pandas** – DataFrames, зареждане и инспекция на данни.</li>
-                            <li>Pandas: Предварителна обработка на данни (липсващи стойности, филтриране).</li>
-                            <li>Визуализация: Matplotlib/Seaborn – създаване на основни графики.</li>
-                            <li>**Практическо Упражнение:** Python за анализ на данни.</li>
+                            <li>Course Introduction</li>
+                            <li>Framing the concepts: Machine Learning, AI, Generative AI, Large Language Models</li>
+                            <li>At a glance: how LLMs and ChatGPT work</li>
+                            <li>Real examples and business applications</li>
                         </ol>
                     </section>
                 </article>
 
-                <article>
-                    <h1>Основи на ML и Първи Проект</h1>
-                    <section id="Module3_ML_Basics" data-hours="8">
-                        <h3>Основи на Машинното Обучение</h3>
+                <article><h1>Python for DataScience (from scratch)</h1>
+                    <section id="PythonBasics" data-hours="6">
+                        <h3>Get familiar with Python</h3>
                         <ol>
-                            <li>Какво е ML модел и как се обучава (пайплайн).</li>
-                            <li>**Supervised vs. Unsupervised Learning** (Класификация, Регресия, Клъстериране).</li>
-                            <li>Предварителна обработка на данни за ML (Scaling, One-Hot Encoding).</li>
-                            <li>Въведение в **scikit-learn**: обща структура на моделите.</li>
-                            <li>Имплементация на Класификатор (Decision Tree).</li>
-                            <li>Оценяване на точността I: Train/Test Split, Метрики (Accuracy, Precision, Recall).</li>
-                            <li>Оценяване на точността II: Матрица на объркване (Confusion Matrix).</li>
+                            <li>Set up the environment: Python, VS Code</li>
+                            <li>Programming basics: variables, basic data types and operations</li>
+                            <li>Conditional statements (if/elif/else) and loops (for/while)</li>
+                            <li>Data structures: lists, tuples, dictionaries</li>
+                            <li>Functions</li>
+                            <li>Virtual environments</li>
+                            <li>Working with Git and Github</li>
                         </ol>
                     </section>
-                    <section id="Module4_Project1" data-hours="8">
-                        <h3>Първи Проект: Класификация на данни</h3>
+                    <section id="DataScienceIntroAndTools" data-hours="4">
+                        <h3>Introduction to Data Science and Tools</h3>
                         <ol>
-                            <li>Поставяне на проблема: Изграждане на **Спам Филтър**.</li>
-                            <li>Feature Engineering и подготовка на текстови данни за класификация.</li>
-                            <li>Имплементация и обучение на модел (Logistic Regression/Naive Bayes).</li>
-                            <li>Тестване, оценка и анализ на грешките.</li>
-                            <li>**Менторска Работа (Група 4):** Индивидуален код ревю и оптимизация.</li>
-                            <li>Финализиране и мини-представяне на резултатите.</li>
+                            <li>Jupyter Notebook</li>
+                            <li>NumPy - ndarrays</li>
+                            <li>Pandas - DataFrames</li>
+                            <li>Matplotlib/Seaborn</li>
+                        </ol>
+                    </section>
+                    <section id="Practice_PythonForDataAnalyses" data-hours="2" data-wip>
+                        <h3>Practice: Python for data analysis</h3>
+                    </section>
+                </article>
+
+                <article><h1>Machine Learning basics</h1>
+                    <section id="ML_Basics" data-hours="8" data-wip>
+                        <h3>Machine Learning basics</h3>
+                        <ol>
+                            <li>What ML models are and how they learn</li>
+                            <li>Supervised, Unsupervised, and Reinforcement Learning</li>
+                            <li>Data preparation and feature engineering (scaling, one-hot encoding)</li>
+                            <li>Introduction to <code>scikit-learn</code></li>
+                            <li>Simple regression example</li>
+                            <li>Simple classification example</li>
+                            <li>Model evaluation: accuracy, confusion matrix, precision, recall</li>
+                        </ol>
+                    </section>
+                    <section id="Project1" data-hours="2" data-wip>
+                        <h3>Project 1: Build a Spam Classifier</h3>
+                        <ol>
+                            <li></li>
                         </ol>
                     </section>
                 </article>
 
-                <article>
-                    <h1>LLM, ChatGPT API и NLP</h1>
-                    <section id="Module5_ChatGPT_API" data-hours="8">
-                        <h3>Работа с ChatGPT API</h3>
+                <article><h1>NLP Basics</h1>
+                    <section id="NLP_Basics" data-hours="4" data-wip>
+                        <h3>NLP</h3>
                         <ol>
-                            <li>Въведение в **OpenAI API**: Настройка, API ключ, ценообразуване.</li>
-                            <li>Основни API заявки с **Python SDK**.</li>
-                            <li>**Промпт Инженерство I**: System Prompt, Context, Constraints.</li>
-                            <li>Промпт Инженерство II: Few-Shot Learning, Chain-of-Thought (CoT), структуриран JSON
-                                изход.</li>
-                            <li>Ограничения и етика при работа с AI (халюцинации).</li>
-                            <li>Практическо Упражнение: Създаване на LLM асистент с дефинирана "личност".</li>
-                            <li>Напреднали настройки на API: `temperature`, `max_tokens`.</li>
-                        </ol>
-                    </section>
-                    <section id="Module6_VibeCoding" data-hours="3">
-                        <h3>Vibe Coding с AI асистенти</h3>
-                        <ol>
-                            <li>Обзор на инструменти: **GitHub Copilot, Cursor, Claude Code**.</li>
-                            <li>Техники за ефективна колаборация с AI при генериране и рефакториране на код.</li>
-                            <li>Валидиране на генериран код и разпознаване на грешки.</li>
-                        </ol>
-                    </section>
-                    <section id="Module7_NLP" data-hours="5">
-                        <h3>NLP и анализ на текст</h3>
-                        <ol>
-                            <li>NLP: Как ML „разбира“ езика.</li>
-                            <li>Предварителна обработка на текст: **Токенизация**, стоп думи, нормализация.</li>
-                            <li>Стъминг (Stemming) и Лематизация (Lemmatization).</li>
-                            <li>Векторизация на текст: Bag-of-Words (BoW) и **TF-IDF**.</li>
-                            <li>Практическа задача: Подготовка на данни за Sentiment Analysis.</li>
+                            <li>Introduction to Natural Language Processing (NLP)</li>
+                            <li>Text preprocessing: cleaning and normalizing text</li>
+                            <li>Tokenization</li>
+                            <li>Text vectorization: Bag-of-Words (BoW), TF-IDF, word embeddings</li>
+                            <li>n-grams / context modeling - capturing token sequences and relationships</li>
+                            <li>Basic language tasks</li>
+                            <li>Practical example: Simple Sentiment Analysis model (data prep → vectorization → training → evaluation)</li>
                         </ol>
                     </section>
                 </article>
 
-                <article>
-                    <h1>AI Асистент, Деплоймент и Финален Проект</h1>
-                    <section id="Module8_Project2_Assistant" data-hours="6">
-                        <h3>Втори Проект: AI Асистент</h3>
+                <article><h1>Understanding LLMs</h1>
+                    <section id="IntroductionToLlmAndChatGpt" data-hours="4" data-wip>
+                        <h3>Introduction to LLM and ChatGPT</h3>
                         <ol>
-                            <li>Обучение на ML модел за **Sentiment Analysis** (анализ на емоции).</li>
-                            <li>Дизайн на логиката: Свързване на ML модела с **ChatGPT за контекстуален отговор**.</li>
-                            <li>**Индивидуална Менторска Работа:** Имплементация на динамична логика (Python).</li>
-                            <li>Тестване и фина настройка на AI чатбота според настроението на потребителя.</li>
+                            <li>How neural networks work</li>
+                            <li>How LLMs learn: understanding the Transformer architecture</li>
+                            <li>How LLMs are used in real-world projects</li>
+                            <li>Introduction to the OpenAI API: settings, API keys, pricing</li>
+                            <li>Basic API requests with Python</li>
                         </ol>
                     </section>
-                    <section id="Module9_Deployment" data-hours="4">
-                        <h3>Визуализация и автоматизация</h3>
+                    <section id="PromtEngineering" data-hours="4" data-wip>
+                        <h3>Prompt Engineering</h3>
                         <ol>
-                            <li>Въведение във **Flask или Streamlit** за уеб интерфейс (препоръчва се Streamlit).</li>
-                            <li>Имплементация на UI и свързване на AI логиката с уеб приложението.</li>
-                        </ol>
-                    </section>
-                    <section id="Module10_Cloud" data-hours="3">
-                        <h3>Деплоймент в облака</h3>
-                        <ol>
-                            <li>Подготовка за деплоймент: `requirements.txt`, управление на зависимости.</li>
-                            <li>**Практическа Сесия:** Качване на AI асистента онлайн (Streamlit Cloud или подобна).
-                            </li>
-                            <li>Тестване и споделяне на проекта.</li>
-                        </ol>
-                    </section>
-                    <section id="Module11_FinalProject" data-hours="9">
-                        <h3>Финален Проект и Портфолио</h3>
-                        <ol>
-                            <li>Избор и Планиране на собствена идея за **AI асистент** (с подкрепа от преподавателя).
-                            </li>
-                            <li>**Индивидуална/Групова Работа** по проекта и менторски насоки.</li>
-                            <li>Подготовка за Представяне.</li>
-                            <li>**Представяне на Финалните Проекти**.</li>
-                            <li>Съвети за **CV, LinkedIn** и портфолио за AI специалисти.</li>
+                            <li>System prompt, context, constraints</li>
+                            <li>Few-shot learning, Chain-of-Thought (CoT), structured JSON output</li>
+                            <li>Handling hallucinations</li>
+                            <li>Practice: create an LLM assistant with a predefined personality</li>
+                            <li>Advanced API settings: <code>temperature</code>, <code>max_tokens</code></li>
                         </ol>
                     </section>
                 </article>
 
-                <article>
-                    <h1>Appendix</h1>
-                    <section id="UsefulVSCodeShortcuts" data-hours="0">
-                        <h3><a
-                                href="https://ProgressBG-ChatGPT_and_ML-course.github.io/ProgressBG-ChatGPT_and_ML-Slides/pages/themes/introductionToPython/introductionToPython.html#/UsefulKeyboardShortcutsBasic">Полезни
-                                VSCode клавишни комбинации</a></h3>
-                    </section>
-                    <section id="onlineFreeResources" data-hours="0">
-                        <h3><a href="/ProgressBG-ChatGPT_and_ML-Slides/pages/readings/UsefulResources.html">Онлайн
-                                ресурси</a></h3>
-                    </section>
-                    <section id="moreExercises" data-hours="0">
-                        <h3><a href="/ProgressBG-ChatGPT_and_ML-Slides/pages/themes/Appendix/MoreTasks/moreTasks.html">Допълнителни
-                                упражнения</a></h3>
+                <article><h1>Vibe Coding</h1>
+                    <section id="VibeCoding" data-hours="4" data-wip>
+                        <h3>Vibe Coding with AI assistants</h3>
+                        <ol>
+                            <li>What VibeCoding is. Overview of the ecosystem: Replit, Bolt, Windsurf, ChatGPT, GitHub Copilot, Cursor, Claude Code</li>
+                            <li>Techniques for effective collaboration with AI when generating and refactoring code</li>
+                            <li>Validating generated code and identifying errors</li>
+                        </ol>
                     </section>
                 </article>
+
+                <article><h1>Build and deploy your AI Assistant</h1>
+                    <section id="Project2_Assistant" data-hours="6" data-wip>
+                        <h3>Project 2: AI Assistant</h3>
+                        <ol>
+                            <li>Training an ML model for <strong>Sentiment Analysis</strong></li>
+                            <li>Designing the logic: connecting the ML model with <strong>ChatGPT for contextual responses</strong></li>
+                            <li><strong>Individual Mentoring:</strong> implementing dynamic logic (Python)</li>
+                            <li>Testing and fine-tuning the chatbot based on user sentiment</li>
+                        </ol>
+                    </section>
+                    <section id="BuildUI" data-hours="2" data-wip>
+                        <h3>Build User Interface (UI)</h3>
+                        <ol>
+                            <li>Introduction to <strong>Flask or Streamlit</strong> for a web interface (Streamlit recommended)</li>
+                            <li>Implementing the UI and connecting it to the AI logic</li>
+                        </ol>
+                    </section>
+                    <section id="Deploiment" data-hours="2" data-wip>
+                        <h3>Cloud Deployment</h3>
+                        <ol>
+                            <li>Preparing for deployment: <code>requirements.txt</code>, dependency management</li>
+                            <li><strong>Practical Session:</strong> deploying the AI assistant online (Streamlit Cloud or similar)</li>
+                            <li>Testing and sharing the project</li>
+                        </ol>
+                    </section>
+                </article>
+
+                <article><h1>Course project and Portfolio </h1>
+                    <section id="Module11_FinalProject" data-hours="8" data-wip>
+                        <h3>Final Project and Portfolio</h3>
+                        <ol>
+                            <li>Selecting and planning your own idea for an <strong>AI Assistant</strong> (with instructor support)</li>
+                            <li><strong>Individual/Group Work</strong> on the project and mentoring</li>
+                            <li>Preparing the presentation</li>
+                            <li><strong>Presenting the final projects</strong></li>
+                        </ol>
+                    </section>
+                    <section id="PortfolioAndCvTips" data-hours="4" data-wip>
+                        <h3>Discuss your portfolio and CV tips</h3>
+                        <ol>
+                            <li>Tips for <strong>CV, LinkedIn</strong> and building an AI portfolio</li>
+                        </ol>
+                    </section>
+                </article>
+
+                <article><h1>Appendix</h1>
+                    <section id="UsefulVSCodeShortcuts" data-hours="0" data-wip>
+                        <h3><a href="https://ProgressBG-ChatGPT_and_ML-course.github.io/ProgressBG-ChatGPT_and_ML-Slides/pages/themes/introductionToPython/introductionToPython.html#/UsefulKeyboardShortcutsBasic">Useful VS Code Shortcuts</a></h3>
+                    </section>
+                    <section id="onlineFreeResources" data-hours="0" data-wip>
+                        <h3><a href="/ProgressBG-ChatGPT_and_ML-Slides/pages/readings/UsefulResources.html">Online Resources</a></h3>
+                    </section>
+                    <section id="moreExercises" data-hours="0" data-wip>
+                        <h3><a href="/ProgressBG-ChatGPT_and_ML-Slides/pages/themes/Appendix/MoreTasks/moreTasks.html">Additional Exercises</a></h3>
+                    </section>
+                </article>
+
             </div>
+
             <div class="stats">
                 <div id="total_hours"></div>
                 <div id="total_days"></div>
