--- a/pages/themes/CourseOverview_IntroductionToAI/CourseOverview_IntroductionToAI.html
+++ b/pages/themes/CourseOverview_IntroductionToAI/CourseOverview_IntroductionToAI.html
@@ -19,54 +19,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../../../outfit/css/reveal.js.css">
     <base target="_blank">
-
-    <style>
-        .reveal .slides >section.first{
-            position: fixed !important;
-            /* width: 100vw;
-            height: 100vh; */
-            top:0 !important;
-            bottom:0 !important;
-            left: 0 !important;
-            right: 0 !important;
-            background: url('./images/the_future_of_generative_ai_with_course_logo_3.png');
-            background-size: 100% 100%;
-            background-repeat: no-repeat;
-        }
-        section.main-section-title:nth-child(1)>h1{
-            width: 12em;
-            margin: 0 auto;
-            margin-top:45vh;
-            padding-bottom: 10px;
-            background:#0009;
-            color:#FFF;
-        }
-        #about_me>h3>a{
-            font-size: .7em;
-            /* float: right; */
-            position: relative;
-            bottom:.1em;
-            margin-left: .6em;
-            vertical-align: middle;
-            color:#FFF;
-            background-color:#3c8bda;
-            border-radius:5px;
-        }
-        #about_me>h3>a:hover{
-            background-color:#0a66c2;
-        }
-        #about_me>h3>a>i{
-            padding: 3px 5px;
-        }
-        .copyright>.company img{
-            background: #fff9;
-        }
-        #attention{
-            display:block;
-            font-size: 1.3em;
-            margin-top:1.7em;
-        }
-    </style>
 </head>
 <body>
     <div class="reveal default center" data-transition-speed="default" data-background-transition="default">
@@ -155,9 +107,9 @@
     </section>
     <section><h3>Настройване на работната среда (Hands-on)</h3>
         <dl class="fa">
-            <dt>Инсталация на **Python 3.x** </dt>
-            <dt>Запознаване с **Jupyter Notebooks / Google Colab** (предимства за ML/AI).</dt>
+            <dt>Основи на **Python** </dt>
             <dt>Създаване на **Виртуална Среда (Virtual Environment)** </dt>
+            <dt>Запознаване с **Jupyter Notebooks / Google Colab** (предимства за ML/AI).</dt>
             <dt>Инсталация и работа с първите необходими библиотеки (`pandas`, `numpy`, `openai`).</dt>
         </dl>
     </section>
@@ -199,9 +151,9 @@
             <dt><b>Филтриране на Спам</b>: ML моделът класифицира входящия имейл като "спам" или "не-спам" въз основа на съдържанието.</dt>
             <dt><b>Медицинска Диагностика</b>: Анализ на рентгенови снимки или ЯМР за автоматично откриване на аномалии или заболявания.</dt>
         </dl>
-        <div style="text-align:center;">
+        <!-- <div style="text-align:center;">
             <a href="./images/ML_Classification_Example.jpg"><img src="./images/ML_Classification_Example.jpg" alt="ML Classification Example" style="height: 40vh; margin-top: 1em;"></a>
-        </div>
+        </div> -->
     </section>
     <section><h3>Регресия и Прогнозиране (Supervised Learning)</h3>
         <dl class="fa">
@@ -209,7 +161,7 @@
             <dt><b>Кредитен риск</b>: Оценка на вероятността даден клиент да изплати заем (кредитен скоринг).</dt>
             <dt><b>Прогноза за времето</b>: Използване на сложни ML модели за по-точни и локализирани метеорологични прогнози.</dt>
         </dl>
-        <iframe style="width:70vw;height:50vh; margin-top:1em;" src="https://www.youtube.com/embed/v2eSSVPxiXs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- <iframe style="width:70vw;height:50vh; margin-top:1em;" src="https://www.youtube.com/embed/v2eSSVPxiXs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
     </section>
     <section><h3>Системи за Препоръки и NLP (Unsupervised & Supervised)</h3>
         <dl class="fa">
@@ -217,7 +169,7 @@
             <dt><b>Обработка на Естествен Език (NLP)</b>: Техники за машинно разбиране и генериране на човешки език. Основа за **ChatGPT** и LLM.</dt>
             <dt><b>Sentiment Analysis</b>: Определяне на емоционалния тон (положителен, отрицателен, неутрален) на текст - ключов компонент във втория проект на курса.</dt>
         </dl>
-        <iframe style="width:80vw;height:60vh;margin-top:1em;" src="https://www.youtube.com/embed/lXUQ-DdSDoE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- <iframe style="width:80vw;height:60vh;margin-top:1em;" src="https://www.youtube.com/embed/lXUQ-DdSDoE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
     </section>
     <section><h3>Генеративен AI (Generative AI) и Асистенти</h3>
         <dl class="fa" style="min-width:80vw">
